@@ -112,6 +112,10 @@ CB_FLAG (cb_flag_stack_on_heap, 0, "stack-on-heap",
 	_("  -fstack-on-heap       PERFORM stack allocated on heap"))
 
 /* Normal flags */
+CB_FLAG_ON (cb_flag_remove_unreachable, 1, "remove-unreachable",
+	_(" -fno-remove-unreachable\tdisable remove of unreachable code"
+	  "                        * turned off by -g"))
+
 CB_FLAG (cb_flag_trace, 1, "trace",
 	_("  -ftrace               generate trace code\n"
 	  "                        * scope: executed SECTION/PARAGRAPH"))
