@@ -187,11 +187,15 @@ was_prev_warn (int linen, int tf)
 		prev_expr_line = cb_exp_line;
 		for (i = 0; i < EXPR_WARN_PER_LINE; i++) {
 			prev_expr_warn[i] = 0;
-			prev_expr_tf[i] = -1;
+			prev_expr_tf[i] = -99;
 		}
 	}
 	for (i=0; i < EXPR_WARN_PER_LINE; i++) {
 		if (prev_expr_warn[i] == linen) {
+			if (tf < 0
+			 && prev_expr_tf[i] == -tf) {
+				return 1;
+			}
 			if (prev_expr_tf[i] == tf) {
 				return 1;
 			}
@@ -4816,7 +4820,7 @@ cb_build_binary_op (cb_tree x, const int op, cb_tree y)
 	cob_s64_t		xval, yval, rslt;
 	char			result[48];
 	char			*llit, *rlit;
-	int			i, j, xscale,yscale, rscale;
+	int			i, j, xscale,yscale, rscale, warn_ok, warn_type;
 	struct cb_literal 	*xl, *yl;
 	cb_tree			relop, e;
 
@@ -4828,6 +4832,8 @@ cb_build_binary_op (cb_tree x, const int op, cb_tree y)
 	/* setting an error tree to point to the correct expression
 	   instead of the literal/var definition / current line */
 	e = relop = cb_any;
+	warn_ok = 1;
+	warn_type = 1;
 	copy_file_line (e, NULL, NULL);
 	llit = rlit = NULL;
 
@@ -5036,6 +5042,7 @@ cb_build_binary_op (cb_tree x, const int op, cb_tree y)
 				yval = atoll((const char*)yl->data);
 				switch (op) {
 				case '=':
+					warn_type = 51 + (xval+yval)%50;
 					if (xval == yval) {
 						relop = cb_true;
 					} else {
@@ -5043,6 +5050,7 @@ cb_build_binary_op (cb_tree x, const int op, cb_tree y)
 					}
 					break;
 				case '~':
+					warn_type = 52 + (xval+yval)%50;
 					if (xval != yval) {
 						relop = cb_true;
 					} else {
@@ -5050,6 +5058,7 @@ cb_build_binary_op (cb_tree x, const int op, cb_tree y)
 					}
 					break;
 				case '>':
+					warn_type = 53 + (xval+yval)%50;
 					if (xval > yval) {
 						relop = cb_true;
 					} else {
@@ -5057,6 +5066,7 @@ cb_build_binary_op (cb_tree x, const int op, cb_tree y)
 					}
 					break;
 				case '<':
+					warn_type = 54 + (xval+yval)%50;
 					if (xval < yval) {
 						relop = cb_true;
 					} else {
@@ -5064,6 +5074,7 @@ cb_build_binary_op (cb_tree x, const int op, cb_tree y)
 					}
 					break;
 				case ']':
+					warn_type = 55 + (xval+yval)%50;
 					if (xval >= yval) {
 						relop = cb_true;
 					} else {
@@ -5071,6 +5082,7 @@ cb_build_binary_op (cb_tree x, const int op, cb_tree y)
 					}
 					break;
 				case '[':
+					warn_type = 56 + (xval+yval)%50;
 					if (xval <= yval) {
 						relop = cb_true;
 					} else {
@@ -5111,6 +5123,7 @@ cb_build_binary_op (cb_tree x, const int op, cb_tree y)
 			}
 			switch (op) {
 			case '=':
+				warn_type = 51;
 				if (xl->data[i] == yl->data[j]) {
 					relop = cb_true;
 				} else {
@@ -5118,6 +5131,7 @@ cb_build_binary_op (cb_tree x, const int op, cb_tree y)
 				}
 				break;
 			case '~':
+				warn_type = 52;
 				if (xl->data[i] != yl->data[j]) {
 					relop = cb_true;
 				} else {
@@ -5125,6 +5139,7 @@ cb_build_binary_op (cb_tree x, const int op, cb_tree y)
 				}
 				break;
 			case '>':
+				warn_type = 53;
 				if (xl->data[i] > yl->data[j]) {
 					relop = cb_true;
 				} else {
@@ -5132,6 +5147,7 @@ cb_build_binary_op (cb_tree x, const int op, cb_tree y)
 				}
 				break;
 			case '<':
+				warn_type = 54;
 				if (xl->data[i] < yl->data[j]) {
 					relop = cb_true;
 				} else {
@@ -5139,6 +5155,7 @@ cb_build_binary_op (cb_tree x, const int op, cb_tree y)
 				}
 				break;
 			case ']':
+				warn_type = 55;
 				if (xl->data[i] >= yl->data[j]) {
 					relop = cb_true;
 				} else {
@@ -5146,6 +5163,7 @@ cb_build_binary_op (cb_tree x, const int op, cb_tree y)
 				}
 				break;
 			case '[':
+				warn_type = 56;
 				if (xl->data[i] <= yl->data[j]) {
 					relop = cb_true;
 				} else {
@@ -5182,6 +5200,7 @@ cb_build_binary_op (cb_tree x, const int op, cb_tree y)
 		}
 		if ((x == cb_true || x == cb_false)
 		 && (y == cb_true || y == cb_false)) {
+			warn_ok = 0;
 			if (op == '&') {
 				if (x == cb_true && y == cb_true) {
 					relop = cb_true;
@@ -5199,8 +5218,10 @@ cb_build_binary_op (cb_tree x, const int op, cb_tree y)
 		} else if (op == '!') {
 			if (x == cb_true) {
 				relop = cb_false;
+				warn_ok = 0;
 			} else if (x == cb_false) {
 				relop = cb_true;
+				warn_ok = 0;
 			}
 		}
 		category = CB_CATEGORY_BOOLEAN;
@@ -5224,15 +5245,15 @@ cb_build_binary_op (cb_tree x, const int op, cb_tree y)
 	}
 
 	if (relop == cb_true) {
-		if (cb_warn_constant_expr) {
+		if (cb_warn_constant_expr && warn_ok) {
 			if (rlit && llit) {
-				if (!was_prev_warn (e->source_line, 1)) {
+				if (!was_prev_warn (e->source_line, warn_type)) {
 					cb_warning_x (cb_warn_constant_expr, e,
 						_("expression '%.38s' %s '%.38s' is always TRUE"),
 						llit, explain_operator (op), rlit);
 				}
 			} else {
-				if (!was_prev_warn (e->source_line, -1)) {
+				if (!was_prev_warn (e->source_line, -warn_type)) {
 					cb_warning_x (cb_warn_constant_expr, e,
 						_("expression is always TRUE"));
 				}
@@ -5242,15 +5263,15 @@ cb_build_binary_op (cb_tree x, const int op, cb_tree y)
 		return cb_true;
 	}
 	if (relop == cb_false) {
-		if (cb_warn_constant_expr) {
+		if (cb_warn_constant_expr && warn_ok) {
 			if (rlit && llit) {
-				if (!was_prev_warn (e->source_line, 0)) {
+				if (!was_prev_warn (e->source_line, 9)) {
 					cb_warning_x (cb_warn_constant_expr, e,
 						_("expression '%.38s' %s '%.38s' is always FALSE"),
 						llit, explain_operator (op), rlit);
 				}
 			} else {
-				if (!was_prev_warn (e->source_line, -2)) {
+				if (!was_prev_warn (e->source_line, -9)) {
 					cb_warning_x (cb_warn_constant_expr, e,
 						_("expression is always FALSE"));
 				}
